Style:  EUID App UI main - exchange 페이지 CSS 일부변경
main - exchange 페이지의 floating 버튼 위치를 일부 수정하였습니다.
(시안과 달리 hover시의 위치가 상당히 우측으로 치우쳐져있었습니다.)

fixes: 추후 요구 사항반영 및 자바스크립트 적용으로 구조 변경 가능성 있음

--- a/client/views/main/exchange.html
+++ b/client/views/main/exchange.html
@@ -179,7 +179,7 @@
           </li>
         </ul>
       </nav>
-      <div class="relative w-[320px]]">
+      <div class="relative w-[320px]">
         <h2 class="sr-only">기기 거래</h2>
         <ul class="flex overflow-y-scroll flex-col flex-nowrap relative">
           <li class="flex">
@@ -499,13 +499,13 @@
           </li>
         </ul>
         <button
-          onclick="location.href='/views/board/writeBoard.html' "
-          class="plusButton flex items-center justify-center w-12 h-12 fixed bg-[#373f67] z-10 shadow-[0px_4px_4px_0px_rgba(0,0,0,0.25)] p-2 rounded-[50%] border-[none] right-[60px] bottom-[85px] hover:bg-white hover:text-[black] hover:shadow-[2px_4px_4px_2px_rgba(0,0,0,0.25)]"
+          onclick="javascript:void(0)"
+          class="plusButton flex items-center justify-center w-12 h-12 fixed bg-[#373f67] z-10 shadow-[0px_4px_4px_0px_rgba(0,0,0,0.25)] p-2 rounded-[50%] border-[none] right-[100px] bottom-[85px] hover:bg-white hover:text-[black] hover:shadow-[2px_4px_4px_2px_rgba(0,0,0,0.25)]"
         >
           <span class="inline-block text-white text-[2rem] mb-1">+</span>
         </button>
         <ul
-          class="exchangeWrite invisible opacity-0 fixed flex gap-3 right-[55px] bottom-[145px] flex-col"
+          class="exchangeWrite invisible opacity-0 fixed flex gap-3 right-[100px] bottom-[145px] flex-col"
         >
           <li class="w-[105px] bg-[#373f67] px-2 py-2.5 rounded-xl">
             <a
