--- a/client/css/main.css
+++ b/client/css/main.css
@@ -672,6 +672,34 @@ video {
   top: 85px;
 }
 
+.right-\[80px\] {
+  right: 80px;
+}
+
+.right-\[100px\] {
+  right: 100px;
+}
+
+.right-\[110px\] {
+  right: 110px;
+}
+
+.right-\[70px\] {
+  right: 70px;
+}
+
+.right-\[85px\] {
+  right: 85px;
+}
+
+.right-\[95px\] {
+  right: 95px;
+}
+
+.right-\[105px\] {
+  right: 105px;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -783,6 +811,14 @@ video {
 
 .ml-\[0\.1875rem\] {
   margin-left: 0.1875rem;
+}
+
+.ml-auto {
+  margin-left: auto;
+}
+
+.mr-auto {
+  margin-right: auto;
 }
 
 .inline-block {
