--- a/client/css/tailwind.css
+++ b/client/css/tailwind.css
@@ -4,3 +4,42 @@
 @tailwind components;
 @tailwind utilities;
 
+/* src/styles.css */
+@layer components {
+  .plusButton:hover + .exchangeWrite {
+    visibility: visible;
+    opacity: 1;
+  }
+  .plusButton:hover span {
+    color: black !important;
+  }
+}
+
+@layer utilities {
+  html {
+    height: 100%;
+  }
+  body {
+    @apply bg-white max-w-xs min-w-[20rem] h-full shadow-[rgba(0,0,0,0.16)_0px_0px_8px] border mx-auto border-solid border-[#e9e9e9];
+    font-family:
+      Pretendard,
+      -apple-system,
+      BlinkMacSystemFont,
+      system-ui,
+      Roboto,
+      'Helvetica Neue',
+      'Segoe UI',
+      'Apple SD Gothic Neo',
+      'Noto Sans KR',
+      'Malgun Gothic',
+      'Apple Color Emoji',
+      'Segoe UI Emoji',
+      'Segoe UI Symbol',
+      sans-serif;
+    font: inherit;
+  }
+  main {
+    position: relative;
+    width: 320px;
+  }
+}
