Feat: board 파트 메인및 서브페이지 부분 tailwind css 작업
전체 페이지 tailwind 작업 중 요구사항 반영 및 기능 고려로 마크업 일부 수정

tailwind 디테일 작업 중... pull and merge 위해 사전 커밋 작업 시행

Fixes: 추후 기능 추가 및 자스 구현 정도에 따라 추가 변경 가능성 농후함

--- a/client/css/board.css
+++ b/client/css/board.css
@@ -1,132 +1,9 @@
-.outer {
-  @apply py-1.5;
-  @apply justify-between;
-  @apply px-5;
-}
-header {
-  @apply gap-3;
-  @apply pt-[5.625rem];
-  @apply block;
-  @apply fixed top-0 inset-x-0;
-  /* width: 100% */
-}
-.change {
-  @apply text-[0.625rem] font-semibold;
-  @apply left-0;
-  @apply flex items-center justify-center h-screen;
-  @apply align-middle;
-  @apply px-3;
-  @apply text-[#9DA1B4];
-  @apply text-[0.625rem] font-[400px];
-  @apply pt-2 pb-6 px-3;
-  @apply text-white bg-[#c4c7d2] rounded text-[0.625rem] px-1 py-0;
-  /* 같이해요 같은 버튼 스타일링 */
-  @apply text-lg font-bold inline-block;
-  @apply box-border;
-  @apply p-3;
-  @apply relative absolute -translate-x-2/4 -translate-y-2/4 max-w-full max-h-full left-2/4 top-2/4;
-  @apply rounded-[5px];
-  @apply absolute -translate-y-2/4 top-2/4;
-  @apply align-middle;
-  @apply ml-auto mr-0 mt-auto mb-0;
-  @apply block;
-  @apply w-[190px];
-  @apply w-[60px] h-[60px];
-  @apply whitespace-nowrap overflow-hidden text-ellipsis;
-  /* 가로 정렬도 고려 */
-  /* 컨테이너 높이 설정 */
-}
-.container {
-  @apply relative w-[400px] h-[300px] bg-[#f1f1f1];
-}
-.box {
-  @apply left-[calc(50%_-_8px)];
-  @apply absolute -translate-x-2/4 -translate-y-2/4 w-[200px] h-[100px] bg-[#ccc] text-center box-border pt-[30px] left-2/4 top-2/4;
-}
-.g {
-  @apply flex justify-start items-stretch gap-3 w-full text-center text-[0.66rem] px-5 py-2 flex-row flex-nowrap;
-  flex-flow: row nowrap;
-}
-.d {
-  @apply fixed inline-block h-12 w-12 text-white bg-[#373F67] shadow-[0px_4px_4px_0px_rgba(0,0,0,0.25)] z-[2] p-2.5 rounded-[50%] right-3 bottom-[6.375rem];
-  @apply text-[0.625rem] text-[#b1b4c3] relative leading-[160%] p-3 border-y-[0.01875rem] border-y-[#9DA1B4] border-solid;
-  @apply border text-[0.66rem] bg-transparent no-underline cursor-pointer px-2.5 py-1.5 rounded-[20px] border-solid border-[#9DA1B4];
-  @apply ml-3.5 mr-auto mt-2 mb-3;
-  @apply block;
-  @apply bg-[#e9e9e9] p-3.5 rounded-[50px];
-  background: url(./../../images/board/plus.png) no-repeat center;
-}
-.dd {
-  @apply pl-3 pr-0 pt-4 pb-0;
-  @apply w-[90%] text-[1.166rem] mt-0 mb-3 mx-[4%] border-[none];
-}
-.da {
-  @apply mb-[0.6875rem];
-  @apply font-semibold text-[0.66rem] my-4;
-}
-.ne {
-  @apply mt-6 mb-[2.125rem] mx-[3.75%];
-  @apply bg-[#373F67] text-[white] text-sm w-[92.8125%] h-[45px] fixed mt-6 mb-[2.125rem] mx-[3.75%] rounded-lg border-0 bottom-[2.125rem];
-}
-.tr {
-  @apply text-[100%] font-[inherit] leading-[inherit] text-inherit m-0 p-0;
-  @apply leading-[160%];
-  @apply text-sm font-normal;
-  @apply w-full;
-  @apply text-[1.1875rem] font-semibold;
-  @apply pl-7 py-3;
-  font-family: inherit;
-  font-feature-settings: inherit;
-  font-variation-settings: inherit;
-}
-dda {
-  @apply w-11 h-6 block relative bg-white shadow-[0_0_16px_3px_rgba(0_0_0_/_15%)] cursor-pointer rounded-[30px];
+dsds {
+  @apply font-semibold;
   @apply text-[1.1625rem] font-semibold;
+  @apply align-middle;
+  @apply text-center;
+  @apply text-[0.65625rem] px-3 py-4 border-y-[0.3px] border-y-[#919191] border-solid;
   @apply text-sm;
-  @apply p-[11px];
-  @apply justify-between;
-  @apply text-[0.625rem] font-normal;
-}
-wee {
-  /* 토글 안에 색 */
-  @apply bg-[#f03d3d];
-  @apply w-[22px] h-[22px] absolute -translate-y-2/4 rounded-[50%] left-1 top-2/4;
-}
-dddsad {
-  @apply w-[1.875rem] h-[1.875rem] bg-[#919191] inline-block rounded-[50px];
-  @apply text-[0.625rem];
-  @apply pt-[0.8125rem];
-  @apply text-sm w-3.5 h-3.5 h-12;
-  @apply my-[0.5625rem];
-  @apply text-lg;
-  @apply mt-6;
-  @apply py-2 px-4;
-  @apply px-2.5 py-1.5;
-  @apply mx-0 my-2;
-  @apply text-[0.65625rem] text-[#9DA1B4];
-  @apply text-sm;
-  /* font-size: 14px;
-  width: 14px;
-  height: 14px;
-  height: 48px; 
-  width: 30px */
-}
-rw {
-  @apply flex justify-start items-center fixed w-full bottom-[1.875rem] flex-row flex-nowrap;
-  flex-flow: row nowrap;
-}
-ssd {
-  @apply text-sm leading-[160%] grow-[2] px-3 py-2 rounded-[20px] border-[none];
-  background: #ebecf0 url(./../../images/comment/smile.svg) no-repeat;
-  /* padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-  border-radius: 20px;
-  border: none;
-  background: #EBECF0 url(./../../images/comment/smile.svg) no-repeat;
-  
-  font-size: 0.875rem;
-  line-height: 160%;
-  flex-grow: 2; */
+  @apply translate-x-[50%,50%];
 }
