--- a/client/views/board/withWho.html
+++ b/client/views/board/withWho.html
@@ -16,26 +16,59 @@
   </head>
 
   <body>
-    <div
-      class="outer w-80 h-[763px] -translate-x-2/4 -translate-y-2/4 absolute bg-pink-300 left-2/4 top-2/4 overflow-hidden"
-    >
-      <header class="">
-        <div
-          class="backBar flex flex-nowrap flex-row px-3 h-[36px] bg-pink-500 items-center justify-center"
-        >
-          <img src="/" class="left-[12px] absolute" alt="뒤로가기" tabindex="0" />
-        </div>
-      </header>
-      <main class="pl-3 pr-3 pt-4 pb-0">
-        <h2 class="w-full text-[1.1625rem] font-semibold mt-0 mb-3">어떤 학생과 함께 할까요?</h2>
 
-        <ul>
-          <li
-            class="h-[46px] text-sm flex flex-nowrap flex-row bg-pink-600 items-center justify-between"
-          >
-            <div class=""><img class="w-[20px] h-[20px]" src="/" alt="/" />성별</div>
-            <div>누구나</div>
+    <header>
+      <h2 class="sr-only">기본 정보</h2>
+      <div class="flex justify-between items-center pt-2 px-4">
+        <time class="inline-block text-sm font-semibold" datetime="2023-06-25T02:26">2:26</time>
+        <ul class="flex justify-start items-start border-0">
+          <li class="cellItem">
+            <span
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-95px_-8px] ml-[5px]"
+            ></span>
+            <span class="sr-only">수신감도</span>
           </li>
+          <li class="cellItem">
+            <span
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-121px_-7px]"
+            ></span>
+            <span class="sr-only">데이터 종류</span>
+          </li>
+          <li class="cellItem">
+            <span
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-148px_-8px] ml-[5px]"
+            ></span>
+            <span class="sr-only">배터리 잔량</span>
+          </li>
+        </ul>
+      </div>
+    </header>
+
+     
+      <main class="pl-3 pb-0">
+        <div
+        class="py-3 my-4 bg-[url('../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-155px_-98px]"
+      ></div>
+        <h2 class="h-[46px] pl-6 text-[1.1875rem] font-semibold">어떤 학생과 함께 할까요?</h2>
+
+        <ul class ="">
+          <li
+          class="flex flex-nowrap flex-row pr-2 h-[46px]  items-center justify-between text-sm"
+        >
+          <div class="h-[16px] flex">
+            <span class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-77px_-178px]"></span>
+            성별
+          </div>
+          <div
+            class="flex flex-nowrap flex-row h-[16px] items-center justify-between"
+          >
+          
+            
+           
+            <span class="mx-[6px] mb-1 pr-1">누구나</span>
+            
+          </div>
+        </li>
           <li class="withSelect text-[0.65625rem]">
             <p class="withDescription text-[#9DA1B4] mx-0 my-2">
               누구나 또는 같은 성별 모임으로 설정해주세요.
@@ -57,32 +90,44 @@
             </button>
           </li>
           <li
-            class="h-[46px] text-sm flex flex-nowrap flex-row bg-pink-600 items-center justify-between"
-          >
-            <div><img src="./../images/withWho/people.png" alt="/" />나이</div>
-            <div tabindex="0">누구나</div>
-          </li>
+          class="flex flex-nowrap flex-row pr-2 h-[46px]  items-center justify-between text-sm"
+        >
+          <div class="h-[16px] flex">
+            <span class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-194px_-108px]"></span>
+            나이
+          </div>
+
+          
+            
+           
+            <span class="mx-[6px] mb-1 pr-1">누구나</span>
+           
+        </li>
           <li
-            class="h-[46px] text-sm flex flex-nowrap flex-row bg-pink-600 items-center justify-between"
+            class="flex flex-nowrap flex-row pr-4 h-[46px]  items-center justify-between text-sm" 
           >
-            <div><img src="/" alt="/" />승인 후 참여</div>
+          <div class="h-[16px] flex">
+            <span class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-108px_-203px]"></span>
+            승인 후 참여
+          </div>
             <input type="checkbox" id="toggle" hidden />
 
             <label
               for="toggle"
-              class="toggleSwitch w-11 h-6 block relative bg-white cursor-pointer rounded-[30px]"
+              class="toggleSwitch w-11 h-6 block relative bg-[red] cursor-pointer rounded-[30px]"
             >
               <span class="toggleButton"></span>
             </label>
           </li>
         </ul>
-        <button
-          class="nextButton bg-[#373F67] text-[white] text-sm w-[92.8125%] h-[45px] fixed mt-6 mb-[2.125rem] mr-[3.75%] rounded-lg border-0 bottom-[2.125rem]"
-          onclick="location.href='/'"
-        >
-          일정만들기
-        </button>
+        
       </main>
+      <button
+    class="nextButton ml-3 bg-[#373F67] text-[white] text-sm w-[295px] h-[45px] fixed mt-6 mb-[2.125rem] mr-[3.75%] rounded-lg border-0 bottom-[2.125rem]"
+    onclick="location.href='/'"
+  >
+    일정만들기
+  </button>
     </div>
   </body>
 </html>
