--- a/client/views/board/boardContent.html
+++ b/client/views/board/boardContent.html
@@ -16,33 +16,68 @@
   </head>
 
   <body>
-    <div
-      class="outer px-3 w-80 h-[763px] -translate-x-2/4 -translate-y-2/4 absolute bg-yellow-200 left-2/4 top-2/4 overflow-hidden"
-    >
-      <header class="">
-        <div
-          class="backBar flex flex-nowrap flex-row py-2 h-[36px] bg-pink-500 items-stretch justify-between"
-        >
-          <div class=""><img src="/" class="left-[12px] absolute" alt="/" tabindex="0" /></div>
-          <div class="flex flex-nowrap flex-row items-stretch justify-between">
-            <img src="/" role="button" alt="공유하기" tabindex="0" />
-            <img src="/" role="button" alt="더보기" tabindex="0" />
-          </div>
-        </div>
+    <header>
+      <h2 class="sr-only">기본 정보</h2>
+      <div class="flex justify-between items-center pt-2 px-4">
+        <time class="inline-block text-sm font-semibold" datetime="2023-06-25T02:26">2:26</time>
+        <ul class="flex justify-start items-start border-0">
+          <li class="cellItem">
+            <span
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-95px_-8px] ml-[5px]"
+            ></span>
+            <span class="sr-only">수신감도</span>
+          </li>
+          <li class="cellItem">
+            <span
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-121px_-7px]"
+            ></span>
+            <span class="sr-only">데이터 종류</span>
+          </li>
+          <li class="cellItem">
+            <span
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-148px_-8px] ml-[5px]"
+            ></span>
+            <span class="sr-only">배터리 잔량</span>
+          </li>
+        </ul>
       </header>
-      <main class="content pr-3 mt-6">
-        <span class="ContentLabel">📝스터디</span>
-        <h2 class="h-[40px] text-lg py-[0.5625rem]">
-          <span class="contentStatus">모집중</span> EUID 피그마 스터디 하실분~
+      
+      
+      <main class="content pl-3 pb-0">
+        <div class="flex flex-nowrap flex-row items-stretch justify-between">
+          <div
+            class="py-3 my-4 bg-[url('../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-155px_-98px]"
+          ></div>
+          
+          
+            <div class="flex flex-nowrap flex-row items-stretch justify-end pr-3">
+              <div
+            class="py-3 my-4 bg-[url('../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-241px_-46px]"
+          ></div>
+          <div
+            class="py-3 my-4 ml-2 bg-[url('../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-254px_-254px]"
+          ></div>
+            </div>
+        </div>
+        
+        <span class="boardLabel text-white bg-[#c4c7d2] rounded px-1 py-0 text-[0.625rem] font-[400]">📝스터디</span>
+        
+          
+          
+        
+        <h2 class="h-[40px] text-[1.1625rem] font-semibold py-[0.5625rem]">
+          <span class="contentStatus text-[#5A85EE]">모집중</span> EUID 피그마 스터디 하실분~
         </h2>
-        <p class="h-[22px] text-sm">
-          <img class="w-3.5 h-3.5" src="./../images/board/people_.png" alt="모집조건" />누구나 참여
-          가능
-        </p>
-        <p class="h-[22px] text-sm">
-          <img class="w-3.5 h-3.5" src="./../images/board/fullcalender.png" alt="시간" />오늘
-        </p>
-        <div class="h-auto mb-9">
+        <div class="h-[16px] flex text-sm box-border my-1">
+          <span class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-108px_-152px]"></span>
+          누구나 참여 가능
+        </div>
+        <div class="h-[16px] flex text-sm box-border my-1">
+          <span class="inline bg-[url('./../../assets/icons/Icon/board_scalenderIcon.png')] bg-no-repeat w-5 h-5"></span>
+          오늘 
+        </div>
+       
+        <div class="h-auto mb-9 text-sm">
           <p>연남동 거주하시는 분 중에서 이번에 시작하는 멋사플레이스 피그마 스터디 하실분~~~</p>
           <p>아직 기초라서 조금 능숙한분과 함께 했으면 좋겠습니다. 툴은 figma 사용할 예정입니다.</p>
           <br />
@@ -50,35 +85,36 @@
           <p>같이 강의도 나눠서 결제하고 들으면 더 좋을 것 같습니다! ㅎㅎ</p>
           <p>*연남동 스타벅스에서 매주 월요일 진행!</p>
         </div>
-        <p class="contentMember h-12 bg-orange-400 pt-[0.8125rem]">
-          참여중인 이웃 <span class="contentMemberCounter">1</span>/4
+        <p class="contentMember h-12 pt-[0.8125rem] text-sm font-semibold">
+          참여중인 이웃 <span class="contentMemberCounter text-[#5A85EE]">1</span></span>/4
         </p>
-        <div class="contentMemberProfile text-[0.625rem] bg-pink-400 h-[30px]">
-          <div class="flex flex-nowrap flex-row bg-blue-500 items-stretch">
+        <div class="contentMemberProfile text-[0.625rem]  h-[30px]">
+          <div class="flex flex-nowrap flex-row  items-stretch">
             <div
               class="contentMemberThumbnail w-[1.875rem] h-[1.875rem] bg-[#919191] inline-block rounded-[50px]"
             ></div>
-            <div class="">
+            <div class="px-1">
               <div
-                class="contentMemberInfo flex flex-nowrap flex-row bg-pink-500 items-stretch justify-between"
+                class="contentMemberInfo flex flex-nowrap flex-row items-stretch justify-between"
               >
-                멋사드미
-                <img class="w-[20px] h-[20px]" src="/" class="contentMemberBadge" alt="/" /><span
-                  class="contentMemberPosition"
-                  >모임장</span
-                >
-              </div>
-              <p class="contentMemberTown">연남동 인증 4회</p>
+                <p>멋사드미</p>
+                <span class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-200px_-138px]"></span>
+                
+                  모임장
+              
             </div>
+            <p class="contentMemberTown">연남동 인증 4회</p>
           </div>
         </div>
       </main>
-      <button
-        class="nextButton bg-[#373F67] text-[white] text-sm w-[92.8125%] h-[45px] fixed mt-6 mb-[2.125rem] mr-[3.75%] rounded-lg border-0 bottom-[2.125rem]"
-        onclick="location.href='/'"
-      >
-        채팅방으로 이동
-      </button>
+      <div class="w-full">
+        <button
+            class="nextButton ml-3 bg-[#373F67] text-[white] text-sm w-[295px] h-[45px] fixed mt-6 mb-[2.125rem] mr-[3.75%] rounded-lg border-0 bottom-[2.125rem]"
+            onclick="location.href='/'"
+          >
+            채팅방으로 이동
+          </button>
+      </div>
     </div>
   </body>
 </html>
